--- a/index.html
+++ b/index.html
@@ -1,76 +1,18 @@
- <!DOCTYPE html>
 <html>
 <head>
-<title>Her Store</title>
+<title>Revised 15th April Mailer</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
-<body>
+<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<!-- Save for Web Slices (Revised 15th April Mailer.jpg) -->
+<table id="Table_01" width="601" height="1812" border="0" cellpadding="0" cellspacing="0">
 
-<table width="700" style="background: linear-gradient(135deg, rgba(255,230,13,1) 0%, rgba(253,209,26,1) 53%, rgba(251,190,24,1) 100%);" align="center">
-  <tr>
-    <td align="center">
-      <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" style="padding:0px">
-        <tr>
-          <td><img src="logo.png"></td>
-          <td align='right'><img src="logoright.png" style="position: relative; margin-top: -11px;"></td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-  <tr>
-	 <td align="center" width="100%" style="color: #256593; font-size:40px; line-height: 41px; font-family: Poppins, sans-serif; font-weight: bold; padding-right: 77px;padding-left: 77px;">Shop on HerStore to fuel her business dreams</td>
-  </tr>
-   <tr>
-	 <td align="center" style="padding-top: 30px; padding-bottom: 30px;"><img src="banner.png"></td>
-   </tr>
-  <tr>
-	<td align="center" style="font-size:33px; font-family: Poppins, sans-serif; font-weight: bold; color: #226590; padding-right: 77px;padding-left: 77px; line-height: 41px;">Your purchase could fuel<br> a woman's business journey.</td>
-  </tr>
-  <tr>
-	<td style="font-family: Poppins, sans-serif; text-align: center; color: black; padding-right: 77px;padding-left: 77px;font-size: 18px; line-height: 28px;">
-	<p>Introducing HerStore - a platform where women empowerment meets convenience. Spearheaded by Britannia Marie Gold, it is revolutionizing the landscape for women entrepreneurs, especially at a time when only 13% of India's entrepreneurs are women.</p>
-	<p>As a woman employed at Britannia, here's your chance to make a difference. When you make your first purchase from any business on HerStore, you'll receive an Amazon gift voucher worth ₹750!</p></td>
-  </tr>
- <tr>
-    <tr>
-		<td align="center" style="font-size:35px; font-family: Poppins, sans-serif; font-weight: bold; color: #eb2429; padding-right: 77px;padding-left: 77px;"><p style="border-bottom: 1px #eb2429 solid; padding-bottom: 7px;">Here's what you need to do:</p></td>
-	</tr>
-    <td align="center">
-      <table align="center" width="90%" border="0" cellspacing="0" cellpadding="20" style="padding:0px">
-        <tr>
-          <td align="center">
-		  <img src="roundicon.png">
-		  <p style="text-align: center; font-family: Poppins, sans-serif; font-size: 17px; line-height: 22px;">Visit HerStore and make your purchase</p>
-		  </td>
-          <td align="center">
-		  <img src="roundicon01.png">
-		  <p style="text-align: center; font-family: Poppins, sans-serif; font-size: 16px; line-height: 22px;">Share an image of your purchase on<br> <img src="socialicon.png">+<img src="socialiconnxt.png"> before 15th April with the caption "Purchased on HerStore in support of women entrepreneurship"</p>
-		  </td>
-        </tr>
-		<tr>
-          <td align="center">
-		  <img src="roundicon02.png">
-		  <p style="text-align: center; font-family: Poppins, sans-serif; font-size: 17px; line-height: 22px;">Tag 2 women asking them to purchase on HerStore to keep the movement going</p>
-		  </td>
-          <td align="center">
-		  <img src="roundicon03.png">
-		  <p style="text-align: center; font-family: Poppins, sans-serif; font-size: 16px; line-height: 22px;">Share a screenshot of your posts on Linkedin and Instagram on 9663382619 with your email id to claim your gift voucher</p>
-		  </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-   <tr>
-		<td align="center" style="font-size:22px; font-family: Poppins, sans-serif; font-weight: bold; color: #432f38; padding-right: 77px;padding-left: 77px;">And there you have it - your ₹750 Amazon voucher is just a few clicks away!</td>
-	</tr>
 	<tr>
-		<td align="center" style="font-size:12px; font-family: Poppins, sans-serif; font-weight: bold; color: #432f38; padding-right: 77px;padding-left: 77px;">
-			<p style="font-size: 16px;">Ready to get started?</p>
-			<a href="https://her.store/en/shop" target="_blank"><img src="shop.png"></a>
-		</td>
+		<td><a href="https://her.store/en/shop"><img src="images/mailler.jpg" alt=""></a></td>
+	
 	</tr>
-	<tr>
-		<td align="center" style="font-size:16px; font-family: Poppins, sans-serif; font-weight: bold; color: #432f38; padding-right: 77px;padding-left: 77px; line-height: 70px;">Come, let's make a difference.</td>
-	</tr>
+	
 </table>
+<!-- End Save for Web Slices -->
 </body>
-</html> 
+</html>
