--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <table id="Table_01" width="601" height="1812" border="0" cellpadding="0" cellspacing="0">
 
 	<tr>
-		<td><a href="https://her.store/en/shop"><img src="images/mailler.jpg" alt=""></a></td>
+		<td><a href="https://her.store/en/shop"><img src="mailler.jpg" alt=""></a></td>
 	
 	</tr>
 	
